[package]
name = "gary-plugin-docker"
version = "0.0.2"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"
description = "simple docker plugin for gary"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../../core" , version = "0.0.1", package = "gary-core"}
bollard = "0.3"
tokio = "1.8"
futures = "0.1"
